<resources>
    <string name="app_name">filmer</string>
    <string name="search_name">大家都在搜：</string>
    <string name="attention">关注</string>
    <string name="found">发现</string>
    <string name="first_page">首页</string>
    <string name="myself">个人</string>
    <string name="title1">我的</string>
    <string name="title2">影单1</string>
    <string name="title3">收藏</string>
    <string name="concern">关注</string>
    <string name="fan">粉丝</string>
    <string name="likes">获赞</string>
    <string name="my_create">|</string>
    <string name="back">&#060;</string>
    <string name="log_in">登录</string>
    <string name="name">请输入昵称</string>
    <string name="id">请输入ID</string>
    <string name="password">请输入密码</string>
    <string name="registered">注册</string>
    <string name="dont_log_in">未注册？</string>
    <string name="tag">tag</string>
    <string name="personal">个人</string>
</resources>
