<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/soilclick"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:background="@drawable/jiaopian"
        >

        <TextView
            android:id="@+id/back"
            android:textColor="@color/colory"
            android:layout_marginTop="15dp"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@+id/login"
            android:layout_weight="1"
            android:orientation="horizontal"
            android:text="@string/back"
            android:textSize="30dp" />

        <TextView
            android:textColor="@color/colory"
            android:layout_marginTop="15dp"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_weight="1.25"
            android:gravity="left"
            android:orientation="horizontal"
            android:text="@string/log_in"
            android:textSize="30dp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <EditText
            android:id="@+id/user_ID"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="50dp"
            android:layout_marginTop="100dp"
            android:layout_marginRight="50dp"
            android:hint="@string/id" />
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <EditText
                android:id="@+id/user_passwords"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="50dp"
                android:layout_marginRight="50dp"
                android:hint="@string/password" />

            <CheckBox
                android:id="@+id/box"
                android:layout_width="64dp"
                android:layout_height="29dp"
                android:layout_alignBottom="@+id/user_passwords"
                android:layout_alignLeft="@+id/user_passwords"
                android:layout_alignEnd="@+id/user_passwords"
                android:layout_alignRight="@+id/user_passwords"
                android:layout_alignParentTop="true"
                android:layout_marginStart="275dp"
                android:layout_marginLeft="275dp"
                android:layout_marginTop="6dp"
                android:layout_marginEnd="-25dp"
                android:layout_marginRight="-25dp"
                android:button="@drawable/checkbox"
                android:checked="true"
                android:scaleX="0.5"
                android:scaleY="0.5" />
        </RelativeLayout>
        <TextView
            android:id="@+id/don_log_in"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:layout_gravity="center"
            android:text="@string/dont_log_in"
            />
        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/constraintLayout"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            tools:context=".MainActivity">

            <Button
                android:id="@+id/log_in"
                android:background="@color/colorz"
                android:layout_width="match_parent"
                android:textSize="30dp"
                android:layout_height="100dp"
                android:text="@string/log_in"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                tools:ignore="MissingConstraints" />
        </androidx.constraintlayout.widget.ConstraintLayout>>
    </LinearLayout>
</LinearLayout>