<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:background="@drawable/jiaopian"
        >

        <TextView
            android:id="@+id/back"
            android:textColor="@color/colory"
            android:layout_marginTop="15dp"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@+id/login"
            android:layout_weight="1"
            android:orientation="horizontal"
            android:text="@string/back"
            android:textSize="30dp" />

        <TextView
            android:id="@+id/login"
            android:textColor="@color/colory"
            android:layout_marginTop="15dp"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_weight="1.25"
            android:gravity="left"
            android:orientation="horizontal"
            android:text="@string/registered"
            android:textSize="30dp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <EditText
            android:id="@+id/user_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="50dp"
            android:layout_marginTop="100dp"
            android:layout_marginRight="50dp"
            android:hint="@string/name" />
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <EditText
                android:id="@+id/user_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="50dp"
                android:layout_marginRight="50dp"
                android:hint="@string/password" />

            <CheckBox
                android:id="@+id/box"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignRight="@+id/user_password"
                android:button="@drawable/checkbox"
                android:checked="true"
                android:scaleX="0.5"
                android:scaleY="0.5" />
        </RelativeLayout>
        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/constraintLayout"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            tools:context=".MainActivity">

            <Button
                android:id="@+id/register"
                android:background="@color/colorz"
                android:layout_width="match_parent"
                android:textSize="30dp"
                android:layout_height="100dp"
                android:text="@string/registered"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                tools:ignore="MissingConstraints" />
        </androidx.constraintlayout.widget.ConstraintLayout>>
    </LinearLayout>
</LinearLayout>